--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -8,12 +8,12 @@
       border-radius: 10rem;
       transition: all 0.2s;
       position: relative;
-      font-size: 1.6em;
+      font-size: $default-font-size;
     }
     
     &:hover {
       transform: translateY(-0.3rem);
-      box-shadow: 0 1rem 2rem rgba($color-black,.2);
+      box-shadow: $shadow-button-hover;
       
       &::after {
         transform: scaleX(1.4) scaleY(1.6);
@@ -23,7 +23,7 @@
     
     &:active {
       transform: translateY(-0.1rem);
-      box-shadow: 0 0.5rem 1rem rgba($color-black, 0.2);
+      box-shadow: $shadow-button-active
     }
     
     &--white {
@@ -53,4 +53,27 @@
       animation: moveInButton 0.5s ease-out 0.75s;
       animation-fill-mode: backwards;
     }
+    }
+
+    .btn-text {
+      &:link, &:visited{
+        font-size: $default-font-size;
+        color: $color-primary;
+        display: inline-block;
+        text-decoration: none;
+        border-bottom: 1px solid $color-primary;
+        padding: 3px;
+        transition: all .2s;
+      }
+      &:hover {
+        background-color: $color-primary;
+        color: $color-white;
+        box-shadow: $shadow-button-active;
+        transform: translateY(-2px);
+      }
+
+      &:active {
+        box-shadow: $shadow-button-active;
+        transform: translateY(0);
+      }
     }
