--- a/Natours/sass/pages/home.scss
+++ b/Natours/sass/pages/home.scss
@@ -26,8 +26,13 @@
 
 .section-tours {
     background-color: $color-grey-light-1;
-    padding: 25rem 0 59rem 0;
+    padding: 25rem 0 15rem 0;
     margin-top: -10rem;
 
+}
+
+.section-stories {
+  position: relative;
+  padding: 15rem 0;
 
 }
