--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -12,7 +12,10 @@ $color-tertiary-dark: #5643fa;
 $color-grey-light-1: #f7f7f7;
 $color-grey-light-2: #eee;
 
-$color-grey-dark: #777;
+$color-grey-dark-1: #777;
+$color-grey-dark-2: #999;
+$color-grey-dark-3: #333;
+
 $color-white: #fff;
 $color-black: #000;
 
@@ -28,5 +31,8 @@ $default-font-size: 1.6rem;
 
 // Grid Variables
 $grid-width: 114rem;
-$gutter-veritcal: 8rem;
+$gutter-vertical: 8rem;
 $gutter-horizontal: 6rem;
+
+// borders
+$border-radius: 3px;
