--- a/Natours/sass/base/_typography.scss
+++ b/Natours/sass/base/_typography.scss
@@ -4,7 +4,7 @@ body {
     /* now defined by html selector */
     /* font-size: 16px; */
     line-height: 1.7;
-    color: $color-grey-dark;
+    color: $color-grey-dark-1;
     padding: 3rem;
   }
 
