--- a/Natours/sass/components/_button.scss
+++ b/Natours/sass/components/_button.scss
@@ -1,4 +1,5 @@
 .btn {
+    &,
     &:link,
     &:visited {
       text-transform: uppercase;
@@ -6,9 +7,13 @@
       padding: 1.5rem 4rem;
       display: inline-block;
       border-radius: 10rem;
-      transition: all 0.2s;
+      transition: all .2s;
       position: relative;
       font-size: $default-font-size;
+
+      // Change for teh <button> element
+      border: none;
+      cursor: pointer;
     }
     
     &:hover {
@@ -21,14 +26,15 @@
       }
     }
     
-    &:active {
+    &:active, &:focus {
+      outline: none;
       transform: translateY(-0.1rem);
       box-shadow: $shadow-button-active
     }
     
     &--white {
       background-color: $color-white;
-      color: $color-grey-dark;
+      color: $color-grey-dark-1;
     
       &::after {
         background-color: $color-white;
@@ -54,7 +60,7 @@
       top: 0;
       left: 0;
       z-index: -1;
-      transition: all 0.4s;
+      transition: all .4s;
     }
     
     &---animated {
