--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -12,7 +12,7 @@
         left: 0%;
         width: 100%;
         backface-visibility: hidden;
-        border-radius: 3px;
+        border-radius: $border-radius;
         overflow: hidden;
         box-shadow: $shadow-box;
 
