--- a/Natours/sass/components/_feature-box.scss
+++ b/Natours/sass/components/_feature-box.scss
@@ -3,7 +3,7 @@
     font-size: 1.5rem;
     padding: 2.5rem;
     text-align: center;
-    border-radius: 3px;
+    border-radius: $border-radius;
     box-shadow: $shadow-box;
     transition: transform .3s;
 
