--- a/Natours/sass/abstracts/_mixims.scss
+++ b/Natours/sass/abstracts/_mixims.scss
@@ -13,3 +13,55 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+// media query manager
+/*
+0   - 600 px  phone
+600 - 900 px  tablet portrait
+900 - 1200 px tablet landscape
+1200- 1800 px normal use
+1800+         Big Desktop
+
+$breakpoint argument choices
+- phone
+- tab-port
+- tab-land
+- big-desktop
+
+1 em    = 16px
+600px   = 37.5em
+900px   = 56.25em
+1200px  = 75em
+1800    = 112.5em
+
+When going to responsive design changes order
+  1.  Base
+  2.  Typography
+  3.  general layout
+  4.  grid
+  5.  page layout
+  6.  components
+  
+*/
+@mixin respond($breakpoint) {
+  @if $breakpoint == phone {
+    @media (max-width: 37.5em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tab-port {
+    @media (max-width: 56.25em) {
+      @content;
+    }
+  }
+  @if $breakpoint == tab-land {
+    @media (max-width: 75em) {
+      @content;
+    }
+  }
+  @if $breakpoint == big-desktop {
+    @media (min-width: 112.5em) {
+      @content;
+    }
+  }
+}
