--- a/Natours/sass/abstracts/_variables.scss
+++ b/Natours/sass/abstracts/_variables.scss
@@ -20,10 +20,10 @@ $color-white: #fff;
 $color-black: #000;
 
 // shadows
-$shadow-photo: 0 1.5rem 4rem rgba($color-black, .4);
-$shadow-photo-hover: 0 2.5rem 4rem rgba($color-black, .5);
-$shadow-box: 0 1.5rem 4rem rgba($color-black, .2);
-$shadow-button-hover: 0 1rem 2rem rgba($color-black,.2);
+$shadow-photo: 0 1.5rem 4rem rgba($color-black, 0.4);
+$shadow-photo-hover: 0 2.5rem 4rem rgba($color-black, 0.5);
+$shadow-box: 0 1.5rem 4rem rgba($color-black, 0.2);
+$shadow-button-hover: 0 1rem 2rem rgba($color-black, 0.2);
 $shadow-button-active: 0 0.5rem 1rem rgba($color-black, 0.2);
 
 // font
@@ -32,6 +32,7 @@ $default-font-size: 1.6rem;
 // Grid Variables
 $grid-width: 114rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
 
 // borders
