--- a/Natours/sass/components/_composition.scss
+++ b/Natours/sass/components/_composition.scss
@@ -1,38 +1,61 @@
 .composition {
-    position: relative;
+  position: relative;
 
-    &__photo {
-        width: 55%;
-        box-shadow: $shadow-photo;
-        border-radius: 2px;
-        position: absolute;
-        z-index: 10;
-        transition: all .2s;
-        outline-offset: 2rem;
+  &__photo {
+    width: 55%;
+    box-shadow: $shadow-photo;
+    border-radius: 2px;
+    position: absolute;
+    z-index: 10;
+    transition: all 0.2s;
+    outline-offset: 2rem;
 
-        &--p1 {
-            left: 0;
-            top: -2rem;
-        }
-        &--p2 {
-            right: 0;
-            top: 2rem;
-        }
-        &--p3 {
-            left: 20%;
-            top: 10rem;
-        }
-        &:hover {
-            // outline: .5rem solid $color-primary;
-            transform: scale(1.05) translateY(-1rem);
-
-            box-shadow: $shadow-photo-hover;
-            z-index: 20;
-        }
+    @include respond(tab-port) {
+      float: left;
+      position: relative;
+      width: 33.33333%;
+      box-shadow: 0 1.5rem 3rem rgba($color-black, 0.2);
     }
 
-    &:hover &__photo:not(:hover) {
-        transform: scale(.95);
-    }
+    &--p1 {
+      left: 0;
+      top: -2rem;
 
+      @include respond(tab-port) {
+        top: 0;
+        transform: scale(1.2);
+      }
+    }
+    &--p2 {
+      right: 0;
+      top: 2rem;
+
+      @include respond(tab-port) {
+        top: -1rem;
+        transform: scale(1.3);
+        z-index: 100;
+      }
+    }
+    &--p3 {
+      left: 20%;
+      top: 10rem;
+
+      @include respond(tab-port) {
+        top: 1rem;
+        left: 0;
+        transform: scale(1.1);
+      }
+    }
+    &:hover {
+      // outline: .5rem solid $color-primary;
+      transform: scale(1.05) translateY(-1rem);
+
+      box-shadow: $shadow-photo-hover;
+      z-index: 20;
+    }
+  }
+
+  &:hover &__photo:not(:hover) {
+    transform: scale(0.95);
+  }
 }
