--- a/Natours/sass/components/_feature-box.scss
+++ b/Natours/sass/components/_feature-box.scss
@@ -1,29 +1,39 @@
 .feature-box {
-    background-color: rgba($color-white, .8);
-    font-size: 1.5rem;
-    padding: 2.5rem;
-    text-align: center;
-    border-radius: $border-radius;
-    box-shadow: $shadow-box;
-    transition: transform .3s;
+  background-color: rgba($color-white, 0.8);
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-align: center;
+  border-radius: $border-radius;
+  box-shadow: $shadow-box;
+  transition: transform 0.3s;
 
-    &__icon {
-        font-size: 6rem;
-        margin-bottom: .5rem;
-        display: inline-block;
-        background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-        -webkit-background-clip: text;
-        background-clip: text;
-        color: transparent;
+  @include respond(tab-port) {
+    padding: 2rem;
+  }
+
+  &__icon {
+    font-size: 6rem;
+    margin-bottom: 0.5rem;
+    display: inline-block;
+    background-image: linear-gradient(
+      to right,
+      $color-primary-light,
+      $color-primary-dark
+    );
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+
+    @include respond(tab-port) {
+      margin-bottom: 0;
     }
+  }
 
-    &:hover {
-        transform: translateY(-1.5rem) scale(1.03);
+  &:hover {
+    transform: translateY(-1.5rem) scale(1.03);
+  }
 
-    }
-
-    & > * {
-        box-shadow: none;
-    }
-
+  & > * {
+    box-shadow: none;
+  }
 }
