--- a/Natours/sass/components/_card.scss
+++ b/Natours/sass/components/_card.scss
@@ -12,6 +12,7 @@
     top: 0;
     left: 0%;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: $border-radius;
     overflow: hidden;
@@ -170,7 +171,9 @@
     font-weight: 100;
   }
 
-  @include respond(tab-port) {
+  // @include respond(tab-port) {
+  // handle when small screen or when device cannnot hover (AKA is touch)
+  @media only screen and (max-width: 56.25em), only screen and (hover: none) {
     height: auto;
     border-radius: $border-radius;
     background-color: $color-white;
