--- a/Trillo/sass/layouts/_layout.scss
+++ b/Trillo/sass/layouts/_layout.scss
@@ -5,11 +5,14 @@
   box-shadow: var(--shadow-dark);
   min-height: 50rem;
 }
-
 .header {
+  font-size: 1.4rem;
   height: 7rem;
   background-color: #fff;
-  border-bottom: va(--color-grey-light-2);
+  border-bottom: 1px solid var(--color-grey-light-2);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .content {
@@ -19,9 +22,12 @@
 .sidebar {
   background-color: var(--color-grey-dark-1);
   flex: 0 0 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .hotel-view {
-  background-color: orangered;
   flex: 1;
+  height: 80rem;
 }
